--- a/Node.js/iot_web/views/index.html
+++ b/Node.js/iot_web/views/index.html
@@ -7,8 +7,12 @@
   <style type="text/css">
   </style>
   <script type="text/javascript">
+    var i = 0;
     $(document).ready(function () {
-
+      $(".btn-success").click(function(){
+        i++;
+        $("#text").html(i.toString());
+      });
     });
   </script>
 </head>
@@ -16,6 +20,7 @@
 <body>
   <h1>Hello world</h1>
   <button class="btn btn-success">点击</button>
+  <h3 id="text"></h3>
 </body>
 
 </html>
